# wm

./: .gitignore  .gitmodules  README.md  Xresources  xsessionrc
Xresources.d/: base16-env.dark.xresources  base16-one.light.xresources  base16-tomorrow.dark.xresources  base16.dark.xresources  base16.light.xresources  dmenu.xresources  rofi.xresources  urxvt.xresources  xterm.xresources
admiral.d/: admiral  admiral.toml  audio_status.sh  bar_app.sh  battery_status.sh  battery_status.sh.b  date_status.sh  for_all_mons.sh  lemonbar  lemonbar_config.sh  network_status.sh  start_admiral.sh
gnome/: gsettings_custom.txt  set_settings.sh
taffybar/: taffybar.hs  taffybar.rc.b
taffybar/lib/: Battery.hs  Battery2.hs  Clock.hs  ImageWidget.hs  Label.hs  Notification.hs  Sep.hs  Tray.hs  Utils.hs  Volume.hs  Workspaces.hs
xmonad/: Makefile  autostart  taffybar.hs  xmonad.hs  xmonadrc.cabal
xmonad.b/: .autostart.swp  autostart  wallpaper.sh  xmonad.hs
xmonad.b/lib/XMonad/Actions/: Volume.hs
xmonad.b/lib/XMonad/Layout/: BinarySpacePartition.withCfg.hs
xmonad/lib/: Bar.hs  Color.hs
xmonad/lib/XMonad/Actions/: Volume.hs
xmonad/lib/XMonad/Layout/: BinarySpacePartition.hs  BinarySpacePartition.withCfg.hs
xmonad/src/Local/: Bar.hs  Color.hs  Utils.hs
xmonad/src/Local/Taffybar/: Battery.hs  Battery2.hs  Clock.hs  ImageWidget.hs  Label.hs  Notification.hs  Sep.hs  Tray.hs  Volume.hs  Workspaces.hs
xmonad/src/Local/XMonad/Actions/: Volume.hs
xmonad/src/Local/XMonad/Layout/: BinarySpacePartition.hs  Spacing.hs
xmonad/src/Local/XMonad/Util/: EZConfig.hs
xmonad/usr/share/xsessions/: XMonad.desktop
