------------------------------------------------------------------------------
name:          xmonadrc
version:       0.2.0.0
synopsis:      SolitaryCipher's xmonad and taffybar config
homepage:      http://www.pmade.com
license:       BSD3
license-file:  LICENSE
author:        Peter Jones <pjones@pmade.com>
maintainer:    
copyright:     Copyright (c) 2013-2016 Peter J. Jones (modified by me)
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

------------------------------------------------------------------------------
library
  exposed-modules:
    Local.Color
    Local.Utils
    Local.XMonad.Layout.Spacing
    Local.XMonad.Layout.BinarySpacePartition
    Local.Taffybar.Sep
    Local.Taffybar.Volume
    Local.Taffybar.Battery
    Local.Taffybar.ImageWidget
    Local.Taffybar.Label
    Local.Taffybar.Clock
    Local.Taffybar.Notification
    Local.Taffybar.Tray
    Local.Taffybar.Workspaces

  hs-source-dirs: src
  ghc-options: -Wall -Werror

  build-depends: xmonad         == 0.12
               , xmonad-contrib == 0.12
               , base           >= 4.0  && < 5.0
               , gtk            >= 0.12 && < 0.15
               , taffybar       == 0.4.6
               , X11            >= 1.6  && < 2.0
               , containers     >= 0.4  && < 0.6
               , process        == 1.4.2.0
               , text           >= 0.11 && < 1.3
               , glib           >= 0.13
               , enclosed-exceptions == 1.0.2
               , HStringTemplate == 0.8.5
               , alsa-mixer      == 0.2.0.3
------------------------------------------------------------------------------
executable xmonadrc
  main-is: xmonad.hs
  ghc-options: -Wall -Werror
  build-depends: base
               , containers
               , xmonad
               , xmonad-contrib
               , xmonadrc
               , taffybar

------------------------------------------------------------------------------
executable taffybarrc
  main-is: taffybar.hs
  ghc-options: -Wall -Werror -threaded -rtsopts
  build-depends: base
               , gtk
               , taffybar
               , xmonadrc

